# manzana

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  Makefile  QA_REPORT_2026-01-06.md  README.md
.github/workflows/: ci.yml  nightly.yml
.pmat/: context.db  deps-cache.json  project.toml
.pmat/context.idx/: functions.lz4  manifest.json
.pmat/metrics/: dependencies.json
benches/: afterburner_bench.rs
contracts/: dispatch-v1.yaml
contracts/.pv/cache/lint/: facb05588bea4a9d.json  fd0e99d7d68bb0e7.json
docs/specifications/: apple-hardware-sai.md
examples/: hardware_discovery.rs  metal_compute.rs  secure_signing.rs
scripts/: macos-server-optimize.sh
src/: afterburner.rs  error.rs  lib.rs  metal.rs  neural_engine.rs  secure_enclave.rs  unified_memory.rs
src/ffi/: iokit.rs  mod.rs  security.rs
tests/: integration_tests.rs  property_tests.rs
