[package]
name = "manzana"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Safe Rust interfaces to Apple hardware for Sovereign AI"
repository = "https://github.com/paiml/manzana"
keywords = ["apple", "metal", "neural-engine", "afterburner", "sovereign-ai"]
categories = ["hardware-support", "os::macos-apis"]
authors = ["PAIML Team"]

[lib]
name = "manzana"
path = "src/lib.rs"

[features]
default = []
afterburner = []
neural-engine = []
metal = []
secure-enclave = []
full = ["afterburner", "neural-engine", "metal", "secure-enclave"]

[dependencies]
thiserror = "1.0"
tracing = "0.1"
bitflags = "2.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
mach2 = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

[[bench]]
name = "afterburner_bench"
harness = false

[[example]]
name = "hardware_discovery"
path = "examples/hardware_discovery.rs"

[[example]]
name = "secure_signing"
path = "examples/secure_signing.rs"

[[example]]
name = "metal_compute"
path = "examples/metal_compute.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.test]
opt-level = 1
debug = true

[lints.rust]
# Note: unsafe_code is managed at the crate level with #![deny(unsafe_code)]
# in lib.rs, with an override in src/ffi/ for the FFI quarantine zone.
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
undocumented_unsafe_blocks = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
